# ForkCast

./: .env.example  .gitignore  LICENSE  OVERHAUL_INVENTORY.md  OVERHAUL_PLAN.md  README.md  backtest_rubric.md  index.html  overhaul_inventory_dom.json  policy-impact-sandbox-project-plan.md  pyproject.toml
assets/: index-BNbq-vH4.js  index-BT_vSFaY.css
docs/: ANCHORING_SPEC.md  FORK_API.md  HACKATHON_TASKS.md  HASH_CHAIN.md  OPERATOR_RUNBOOK.md  PRODUCT_PLAN.md  ROADMAP.md  STATE.md
prompts/: agent_generation.md  case_graph_extraction.md  impact_report_generation.md
schemas/: agents.schema.json  audit_manifest.schema.json  blind_prediction.schema.json  case_graph.schema.json  report_claims.schema.json  simulation_config.schema.json  truth_set.schema.json
scripts/: augment_case_graph.py  kaspa_anchor_manifest.py  kaspa_broadcast_anchor.py  kaspa_create_testnet_wallet.py  preflight_demo.sh  probe_oasis.py  record_anchor_tx.py  render_cc2003_checklist.py  render_ulez_human_adjudication.py  run_ablation.py  run_adversarial_inputs.py  run_api.py  run_mock_simulation.py  run_negative_controls.py  run_phase1_case_graph.py  run_phase2.py  run_robustness.py  verify_run.py
tests/: test_ablation_harness.py  test_adversarial_inputs.py  test_case_graph_augmentation.py  test_congestion_charge_case.py  test_fork_engine.py  test_hash_chain_manifest.py  test_kaspa_broadcast_anchor.py  test_live_policy_anchor_record.py  test_live_policy_async.py  test_llm_config.py  test_mock_simulation.py  test_negative_controls.py  test_oasis_probe.py  test_phase1_case_graph.py  (+15 more)
(+129 files in other folders)
